--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	<link rel="stylesheet" type="text/css" href="./style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
@@ -20,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 
 
-	<title>.</title>
+	<title>La chouette agence | Entreprise webdesign Lyon</title>
 
 	<!-- Analytics -->
 
@@ -292,9 +293,7 @@
 			<!-- Footer - bloc-8 END -->
 
 		</div>
-		<!-- Principal conteneur END -->
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-
+	</div>
 </body>
 
 </html>
