Format AVIF transformer en WebP pour compatibilité et label for

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		content="La chouette agence, agence de web design basée à Lyon vous aidera à rendre votre entreprise attractive et visible sur internet grâce à son équipe talententueuse de webdesigner qui seront à votre écoute pour faire évoluer votre projet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-	<link rel="shortcut icon" type="image/jpg" href="./favicon.jpg">
+	<link rel="shortcut icon" type="image/jpg" href="./favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	<link rel="stylesheet" type="text/css" href="./style.min.css">
@@ -40,7 +40,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html" title="Aller à l'acceuil"><img
-								src="img/la-chouette-agence.avif" alt="Logo de La chouette agence" height="40" /></a>
+								src="img/la-chouette-agence.webp" alt="Logo de La chouette agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -70,7 +70,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100"
 							alt="Personne qui dessine" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -179,9 +179,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.avif" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"
-							title="Cliquez pour afficher plus"><img src="img/1.avif" alt="Livres ouverts empilé"
+							title="Cliquez pour afficher plus"><img src="img/1.webp" alt="Livres ouverts empilé"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -191,11 +191,11 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"
-							title="Cliquez pour afficher plus"><img src="img/2.avif"
+							title="Cliquez pour afficher plus"><img src="img/2.webp"
 								class="img-responsive portfolio-thumb"
-								alt="Photohraohe prennant des photos la nuit" /></a>
+								alt="Photographe prennant des photos la nuit" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -206,9 +206,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"
-							title="Cliquez pour afficher plus"><img src="img/3.avif"
+							title="Cliquez pour afficher plus"><img src="img/3.webp"
 								class="img-responsive portfolio-thumb" alt="Matériel de design" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -219,9 +219,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"
-							title="Cliquez pour afficher plus"><img src="img/4.avif"
+							title="Cliquez pour afficher plus"><img src="img/4.webp"
 								class="img-responsive portfolio-thumb"
 								alt="Travaille sur la conception d'un site" /></a>
 						<h3 class="mg-md text-center">
