--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="La chouette agence, agence de web design basée à Lyon vous aidera à rendre votre entreprise attractive et visible sur internet grâce à son équipe talententueuse de webdesigner qui seront à votre écoute pour faire évoluer votre projet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="./favicon.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.avif" alt="Logo de La chouette Agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="Logo de La chouette Agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
