--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<li>
 							</li>
 							<li>
-								<a href="page2.html" title="Allez à contact">Contact</a>
+								<a href="contact.html" title="Allez à contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -76,7 +76,7 @@
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero" title="Contactez-nous !">Contact</a>
 						</div>
 					</div>
@@ -160,7 +160,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="page2.html" title="Contactez-nous !">Contactez notre
+								class="ltc-white bold-link" href="contact.html" title="Contactez-nous !">Contactez notre
 								équipe</a><br>
 						</p>
 					</div>
@@ -245,7 +245,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
 							title="Contactez-nous !">Contact</a>
 					</div>
 				</div>
