--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/jpg" href="./favicon.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
@@ -135,25 +135,25 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" title="Visitez notre Twitter"><span
+							<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" target="blank"><span
 								class="fa fa-twitter icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html" title="Visitez notre Facebook"><span
+						<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" target="blank"><span
 								class="fa fa-facebook icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html" title="Visitez notre Dribbble"><span
+						<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" target="blank"><span
 								class="fa fa-dribbble icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="index.html" title="Visitez notre Instagram"><span
+						<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" target="blank"><span
 								class="fa fa-instagram icon-md"></span></a>
 					</div>
 					</div>
