--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 		content="La chouette agence, agence de web design basée à Lyon vous aidera à rendre votre entreprise attractive et visible sur internet grâce à son équipe talententueuse de webdesigner qui seront à votre écoute pour faire évoluer votre projet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
+	<accept-encoding></accept-encoding>
+
 	<link rel="shortcut icon" type="image/jpg" href="./favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<link rel="stylesheet" type="text/css" href="./style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -264,25 +266,25 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" title="Visitez notre Twitter"><span
+									<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" target="blank"><span
 											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" title="Visitez notre Facebook"><span
+									<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" target="blank"><span
 											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" title="Visitez notre Dribbble"><span
+									<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" target="blank"><span
 											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" title="Visitez notre Instagram"><span
+									<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" target="blank"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
