--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="Logo de La chouette Agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html" aria-label="Acceuil"><img src="img/la-chouette-agence.webp" alt="Logo de La chouette Agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -43,12 +43,12 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Acceuil" title="Allez à l'acceuil">Accueil</a>
 					</li>
 					<li>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="contact.html" aria-label="Contact" title="Contactez-nous !">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -85,24 +85,24 @@
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" aria-required="true" />
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" aria-required="true" />
 					</div>
 					<div class="form-group">
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="email" aria-required="true" />
 					</div>
 					<div class="form-group">
 						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" aria-required="true"></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -135,25 +135,25 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" target="blank"><span
+							<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" aria-label="Twitter" target="blank"><span
 								class="fa fa-twitter icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" target="blank"><span
+						<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" aria-label="Facebook" target="blank"><span
 								class="fa fa-facebook icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" target="blank"><span
+						<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" aria-label="Dribbble" target="blank"><span
 								class="fa fa-dribbble icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" target="blank"><span
+						<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" aria-label="Instagram" target="blank"><span
 								class="fa fa-instagram icon-md"></span></a>
 					</div>
 					</div>
