--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html" title="Aller à l'acceuil"><img
+						<a class="navbar-brand" href="index.html" title="Aller à l'acceuil" aria-label="Acceuil"><img
 								src="img/la-chouette-agence.webp" alt="Logo de La chouette agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -52,12 +52,12 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html" title="Aller à l'acceuil">Accueil</a>
+								<a href="index.html" title="Aller à l'acceuil" aria-label="Acceuil">Accueil</a>
 							</li>
 							<li>
 							</li>
 							<li>
-								<a href="contact.html" title="Allez à contact">Contact</a>
+								<a href="contact.html" title="Allez à contact" aria-label="Contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -79,7 +79,7 @@
 						</h1>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero" title="Contactez-nous !">Contact</a>
+								id="cta-hero" title="Contactez-nous !" aria-label="Contact">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -162,7 +162,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="contact.html" title="Contactez-nous !">Contactez notre
+								class="ltc-white bold-link" href="contact.html" title="Contactez-nous !" aria-label="Contact">Contactez notre
 								équipe</a><br>
 						</p>
 					</div>
@@ -248,7 +248,7 @@
 					</h2>
 					<div class="col-sm-12 text-center">
 						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
-							title="Contactez-nous !">Contact</a>
+							title="Contactez-nous !" aria-label="Contact">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -263,28 +263,28 @@
 						<p class="text-center black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
-						<div class="row row-no-gutters social">
+						<div class="row row-no-gutters social socialspace">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" target="blank"><span
+									<a class="social linksize" href="https://twitter.com/" title="Visitez notre Twitter" aria-label="Twitter" target="blank"><span
 											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" target="blank"><span
+									<a class="social linksize" href="https://www.facebook.com/" title="Visitez notre Facebook" aria-label="Facebook" target="blank"><span
 											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" target="blank"><span
+									<a class="social linksize" href="https://dribbble.com/" title="Visitez notre Dribbble" aria-label="Dribbble" target="blank"><span
 											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" target="blank"><span
+									<a class="social linksize" href="https://instagram.com/" title="Visitez notre Instagram" aria-label="Instagram" target="blank"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
