--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.min.js" defer></script>
 	<script src="./js/jqBootstrapValidation.min.js" defer></script>
-	<script src="./js/formHandler.min.js"defer></script>
+	<script src="./js/formHandler.min.js" defer></script>
     <title>La chouette agence contact | Entreprise webdesign Lyon </title>
 
     
@@ -80,7 +80,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label for="name">
 							Nom
@@ -97,7 +97,7 @@
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" aria-required="true" />
+						<input id="input_504" class="form-control" type="email" aria-required="true" />
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -132,28 +132,28 @@
 				<p class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters social socialspace">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/" title="Visitez notre Twitter" aria-label="Twitter" target="blank"><span
+							<a class="social linksize" href="https://twitter.com/" title="Visitez notre Twitter" aria-label="Twitter" target="blank"><span
 								class="fa fa-twitter icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://www.facebook.com/" title="Visitez notre Facebook" aria-label="Facebook" target="blank"><span
+						<a class="social linksize" href="https://www.facebook.com/" title="Visitez notre Facebook" aria-label="Facebook" target="blank"><span
 								class="fa fa-facebook icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://dribbble.com/" title="Visitez notre Dribbble" aria-label="Dribbble" target="blank"><span
+						<a class="social linksize" href="https://dribbble.com/" title="Visitez notre Dribbble" aria-label="Dribbble" target="blank"><span
 								class="fa fa-dribbble icon-md"></span></a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a class="social" href="https://instagram.com/" title="Visitez notre Instagram" aria-label="Instagram" target="blank"><span
+						<a class="social linksize" href="https://instagram.com/" title="Visitez notre Instagram" aria-label="Instagram" target="blank"><span
 								class="fa fa-instagram icon-md"></span></a>
 					</div>
 					</div>
