--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<img src="img/logo.webp" class="center-block image-resize-mode" width="100"
 							alt="Personne qui dessine" />
 						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
+							La chouette agence
 						</h1>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
