--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Entreprise webdesign Lyon, sites design, graphiste web, agence design Lyon, agence design, webdesigner, web design, responsive design, css design awards, css design, hk web design, design site web, site internet design">
     <meta name="description" content="La chouette agence, agence de web design basée à Lyon vous aidera à rendre votre entreprise attractive et visible sur internet grâce à son équipe talententueuse de webdesigner qui seront à votre écoute pour faire évoluer votre projet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/jpg" href="./favicon.png">
