--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+		content="Entreprise webdesign Lyon, sites design, graphiste web, agence design Lyon, agence design, webdesigner, web design, responsive design, css design awards, css design, hk web design, design site web, site internet design">
 	<meta name="description"
 		content="La chouette agence, agence de web design basée à Lyon vous aidera à rendre votre entreprise attractive et visible sur internet grâce à son équipe talententueuse de webdesigner qui seront à votre écoute pour faire évoluer votre projet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
